# techyowls-io-blog-public

./: README.md
.claude/: settings.local.json
ai-coding-productivity-masterclass/: README.md
build-mcp-server-python-tutorial/: .env.example  README.md  pyproject.toml
build-mcp-server-python-tutorial/src/github_mcp/: __init__.py  github_client.py  prompts.py  resources.py  server.py  tools.py
claude-computer-use-tutorial/: .env.example  .gitignore  README.md  pyproject.toml
claude-computer-use-tutorial/src/: __init__.py  basic_agent.py  form_automation.py  screen_controller.py  utils.py
docker-compose-spring-boot/: Dockerfile  README.md  docker-compose.yml  pom.xml
flyway-migrations-guide/: README.md  pom.xml
github-actions-cicd/: Dockerfile  README.md
golang-rest-api-guide/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
gradle-multi-module/: README.md  build.gradle.kts  settings.gradle.kts
java-21-virtual-threads/: README.md  pom.xml
java-streams-guide/: README.md  pom.xml
kafka-message-ordering/: README.md  pom.xml
langchain4j-guide/: README.md  pom.xml
logging-best-practices/: README.md  pom.xml
model-context-protocol-mcp-guide/: README.md
openapi-swagger-guide/: README.md  pom.xml
redis-caching-guide/: README.md  pom.xml
rest-api-best-practices/: README.md  pom.xml
spring-ai-mcp-guide/: .gitignore  README.md  docker-compose.yml
spring-ai-structured-output/: README.md  pom.xml
spring-boot-ai-starter/: .gitignore  README.md  docker-compose.yml  pom.xml
spring-boot-testing/: README.md  (+1 more)
(+239 files in other folders)
